# cli_gptr

./: Cargo.toml  README.md
.github/workflows/: build.yaml
config/: gptr.json  gptr_predefine.json
src/: args.rs  config.rs  deepl.rs  file.rs  gpt.rs  lib.rs  main.rs  predefine.rs
