[package]
name = "gptr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "blocking", "rustls-tls"] }
futures = "0.3.26"
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread"] }
reqwest-middleware = "0.2.0"
serde_json = "1.0.93"
serde = "1.0.152"
deepl-api = { git = "https://github.com/Niedzwiedzw/deepl-api-rs", rev = "4ce01e788513474ac540c28397d0808eb8c3c8af" }
spinners = { git = "https://github.com/FGRibreau/spinners/", rev = "8b4d130e80cc7c8d2111c95bdd6448bf8fc419f0"}
openssl = { version = "0.10.45", features = ["vendored"] }
dirs = "4.0.0"